# luxbin-chain

./: .env.example  .gitignore  .vercelignore  CHATBOT_BLOCKCHAIN_INTEGRATION.md  CHATBOT_INTEGRATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_README.md  DEPLOY_TO_VERCEL.md  DEPLOY_WITH_ETHICAL_AI.md  FORCE_UPDATE.md  HOW_TO_GET_LUXBIN_TO_TESLA.md  IMMUNE_SYSTEM_README.md  LICENSE  LIVING_AI_ARCHITECTURE.md  LIVING_SYSTEM_STATUS.md  LUXBIN-README.md  LUXBIN_IMMUNE_FRAMEWORK.md  Makefile  NEXT_STEPS.md  OPENAI_SETUP_COMPLETE.md  OPTIMISM_TESTNET_SETUP.md  PHONE_ACCESS_GUIDE.md  README.md  REWARD_SETUP_GUIDE.md  SECURITY.md  START_CHATBOT.md  START_ETHICAL_LUXBIN.sh  START_ETH_EXPLORER.sh  START_HCT_DASHBOARD.sh  START_LUXBIN_EXPLORER.sh  START_MIRROR_EXPLORER.sh  START_USDC_EXPLORER.sh  SUPERCHAIN_DEPLOYMENT_GUIDE.md  VEGETARIAN_FAILSAFE_SUMMARY.md  VEGETARIAN_ROBOTICS_BLUEPRINT.md  WORLD_CHANGING_PLAN.md  add_dimensions_organic_ai.py  ai_group_chat.py  ai_society_blockchain.py  (+93 more)
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  codeql.yml
.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/dev/: prerender-manifest.json  trace
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/types/: routes.d.ts  validator.ts
api/: index.py
app/about/: page.tsx
app/dna-explorer/: page.tsx
app/lightshow/: page.tsx
app/omnichain-dna/: page.tsx
app/research/: page.tsx
app/rewards/: page.tsx
app/technical/: page.tsx
app/testnet/: page.tsx
arxiv-submission/: LUXBIN_Vegetarian_Failsafe_Research_Paper.md  README.md  arxiv-submission-cover-letter.tex  colab-results-summary.txt  performance-benchmarks.json  validation-results.md
autonomous-ai/: GET_API_KEYS.md  INSTALL_SIMPLE.sh  QUICK_START.md  README.md  chatbot_api_server.py  document_indexer.py  photonic_encoder.py  rag_chatbot.py  rag_search.py  requirements-minimal.txt  requirements.txt  simple_chatbot_server.py  start_chatbot_server.sh  test_openai.py
autonomous-ai/memory/: memory_manager.py
autonomous-ai/models/: README.md  ai_model_router.py
components/: DNABlockExplorer.tsx  ETHtoNICHESwap.tsx  LightshowDNAExplorer.tsx  NFTDeployer.tsx  NicheRewardsDashboard.tsx  OmnichainDNAExplorer.tsx  RewardDistributorDeployer.tsx  TokenDeployer.tsx
contracts/: DeploymentRewardDistributor.sol  GaslessForwarder.sol  ImmuneCell.sol  ImmuneStaking.sol  LuxbinCircleIntegration.sol  LuxbinEthSwap.sol  LuxbinOmnichainHub.sol  LuxbinRewardDistributor.sol  LuxbinStaking.sol  LuxbinStaking_Fixed.sol  LuxbinStaking_Verified.sol  LuxbinSwap.sol  LuxbinToken.sol  LuxbinUSDCStaking.sol  LuxbinUSDCStaking_LowMin.sol  LuxbinUSDCStaking_UltraLowMin.sol  NicheRewardToken.sol  NicheSuperchainERC20.sol  NicheToken.sol  deploy_swap.sh  foundry.toml  hardhat.config.js  package.json
cumulus/test/runtime/: Cargo.toml
demo/: README.md  acoustic_shielding_sim.py
demo/scripts/: full_demo.py
docs/: AI_COMPUTE_INTEGRATION.md  AUTONOMOUS_DEPLOYMENT_README.md  COMPLETE_SUMMARY.md  DEPLOY_NOW.md  FREE_DEPLOYMENT_GUIDE.md  INTEGRATION_PLAN.md  PALLET_AI_COMPUTE.md  PARTNERSHIP_DECK.md  architecture.md  index.html  quick_immune_deploy.py
ethereum-integration/: README.md  bridge-asset.js  check-balance.js  package.json  send-cross-chain-message.js
hct-app/: README.md  app.py  requirements.txt
luxbin-app/: luxbin_code_translator.py  package.json  test_code_translator.py  tsconfig.json  vercel.json
offchain-workers/: worker_daemon.py
python-implementation/: LDD_FSD_OPTIMIZATION_REPORT.md  LuxbinXReserve.sol  LuxbinXReserve_Updated.sol  README.md  TESLA_AI_OPTIMIZATION_REPORT.md  TEST_VEGETARIAN_FAILSAFE.sh  ai_organism_cli.py  auto_deploy.py  blockchain_explorer.py  circle_api.py  circle_api_integration.py  claude_threat_analyzer.py  config.py  deploy_immune_system.py  hermetic_blockchain_mirror.py  hermetic_manifestation.py  infinite_cell_spawner.py  luxbin_ai_ethical_compute.py  luxbin_copilot.py  luxbin_ethical_config.json  luxbin_native_explorer.py  luxbin_temporal_cryptography.py  luxbin_tesla_ai_optimizer.py  luxbin_treasury.py  luxbin_usdc_explorer.py  luxbin_usdc_integration.py  luxbin_vegetarian_failsafe.py  luxbin_web3_bridge.py  mirror_explorer_integration.py  mirror_immune_integration.py  multi_chain_fusion.py  organism_builder.py  run_ai_organism.sh  tesla_ldd_fsd_optimizer.py  tesla_ldd_piezoelectric_generator.py  tesla_smart_charging_optimizer.py  test_mac_node.py  wallet.json
quantum-wallet-security/: quantum_transaction_mirror_recovery.py
recovery-system/: claim_lux_compensation.py  crypto_reality_check_demo.py
scripts/: FullAutoDeploy.js  deploy-omnichain.sh  luxbin_ai_organism_cli.py  luxbin_auto_analyzer.py  luxbin_ethical_base_integration.py  luxbin_ethical_compute.py  luxbin_immune_config.py  luxbin_immune_system.py  luxbin_repo_analyzer.py  luxbin_tesla_demo.py  luxbin_token_interaction.py  luxbin_vegetarian_failsafe.py  luxbin_whitehat_mode.py
substrate/frame/acoustic-shielding/: Cargo.toml
substrate/frame/acoustic-shielding/src/: lib.rs  mock.rs  tests.rs
substrate/frame/ai-compute/: Cargo.toml
substrate/frame/ai-compute/src/: lib.rs  lib.rs.bak  mock.rs  tests.rs
substrate/frame/erc4337/: Cargo.toml  README.md
substrate/frame/erc4337/src/: lib.rs
substrate/frame/quantum-ai/: Cargo.toml
substrate/frame/quantum-ai/src/: lib.rs
substrate/frame/quantum-diamond/: Cargo.toml
substrate/frame/quantum-diamond/src/: lib.rs
substrate/frame/temporal-crypto/: Cargo.toml
substrate/frame/temporal-crypto/src/: lib.rs  mock.rs  tests.rs
testnet-incentives/: README.md  luxbin_testnet_rewards.py
(+1591 files in other folders)
