 [package]
        name = "sollochain-template-runtime"
        version = "0.1.0"
        description = "A solochain template runtime"
        authors = ["Substrate DevHub 
    <https://github.com/substrate-developer-hub>"]
        homepage = "https://substrate.io/"
        edition = "2021"
        license = "Unlicense"
        publish = false
        repository =
    "https://github.com/substrate-developer-hub/solochain-template"

        [package.metadata.docs.rs]
        targets = ["x86_64-unknown-linux-gnu"]

        [dependencies]
        codec = { package = "parity-scale-codec", version = "3.0.0",
    default-features = false, features = [
        	"derive",
        ] }
        scale-info = { version = "2.11.6", default-features = false, features =
     ["derive"] }

        # Substrate
        frame-benchmarking = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }
        frame-executive = { git = "https://github.com/paritytech/polkadot-sdk",
     branch = "stable2407", default-features = false }
        frame-support = { git = "https://github.com/paritytech/polkadot-sdk",
    branch = "stable2407", default-features = false }
        frame-system = { git = "https://github.com/paritytech/polkadot-sdk",
    branch = "stable2407", default-features = false }
        frame-system-benchmarking = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }
        frame-system-rpc-runtime-api = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }
        frame-try-runtime = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }

        # Substrate pallets
        pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk",
    branch = "stable2407", default-features = false }
        pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk",
     branch = "stable2407", default-features = false }
        pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk",
    branch = "stable2407", default-features = false }
        pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk",
    branch = "stable2407", default-features = false }
        pallet-timestamp = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }
        pallet-transaction-payment = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }
        pallet-transaction-payment-rpc-runtime-api = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }

        # LUXBIN custom pallets
        pallet-temporal-crypto = { path = "../../pallets/temporal-crypto",
    default-features = false }
        pallet-ai-compute = { path = "../../pallets/ai-compute",
    default-features = false }

        # Contracts pallet (NEW)
        pallet-contracts = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }
        pallet-contracts-primitives = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }

        # Substrate primitives
        sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch =
     "stable2407", default-features = false }
        sp-block-builder = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }
        sp-consensus-aura = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }
        sp-consensus-grandpa = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }
        sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch
    = "stable2407", default-features = false }
        sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk",
    branch = "stable2407", default-features = false }
        sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk",
    branch = "stable2407", default-features = false }
        sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk",
    branch = "stable2407", default-features = false }
        sp-session = { git = "https://github.com/paritytech/polkadot-sdk",
    branch = "stable2407", default-features = false }
        sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch =
     "stable2407", default-features = false }
        sp-transaction-pool = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }
        sp-version = { git = "https://github.com/paritytech/polkadot-sdk",
    branch = "stable2407", default-features = false }

        # Used for the node template's RPCs
        frame-system-rpc-runtime-api = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }

        # Used for runtime benchmarking
        frame-benchmarking = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }
        frame-system-benchmarking = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407",
    default-features = false }

        [build-dependencies]
        substrate-build-script-utils = { git =
    "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }

        [features]
        default = ["std"]
        std = [
        	"codec/std",
        	"scale-info/std",
        	"frame-benchmarking/std",
        	"frame-executive/std",
        	"frame-support/std",
        	"frame-system/std",
        	"frame-system-benchmarking?/std",
        	"frame-system-rpc-runtime-api/std",
        	"frame-try-runtime/std",
        	"pallet-aura/std",
        	"pallet-balances/std",
        	"pallet-grandpa/std",
        	"pallet-sudo/std",
        	"pallet-timestamp/std",
        	"pallet-transaction-payment/std",
        	"pallet-transaction-payment-rpc-runtime-api/std",
        	"pallet-temporal-crypto/std",
        	"pallet-ai-com



